--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,12 @@
         <button id="btnDownloadPlots" class="btn btn-outline-info shadow">⬇️ Download Plots</button>
       </div>
 
+      <!-- View plots -->
+      <div class="mt-4">
+        <a href="/visualize" class="btn btn-outline-warning">📊 View Plots</a>
+      </div>
+
+
     </div>
   </div>
 
